--- a/src/sass/layouts/_registration-form.scss
+++ b/src/sass/layouts/_registration-form.scss
@@ -65,6 +65,11 @@
       transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
+    &:not(:hover),
+    &:not(:focus) {
+      transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
     &::placeholder {
       font-style: normal;
       font-weight: 600;
