--- a/src/sass/layouts/_contact-info.scss
+++ b/src/sass/layouts/_contact-info.scss
@@ -26,6 +26,12 @@
   &:hover,
   &:focus {
     color: $accent-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &:not(:hover),
+  &:not(:focus) {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
